# crisp

./: .gitignore  LICENSE  README.html  README.md
c8games/: #PONG#  .#PONG
chip8_core/: Cargo.toml
chip8_core/src/: emu_config.rs  lib.rs
desktop/: Cargo.toml  config.toml
desktop/src/: audio_driver.rs  cli.rs  main.rs  video_driver.rs
