[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
clap = { version = "4.3.11", features = ["derive"] }
chip8_core = { path = "../chip8_core" }
sdl2 = ">0.32"
spin_sleep = "1.1.1"
